fixup! Jul 2019 revamp

--- a/templates/tex/cv.sty
+++ b/templates/tex/cv.sty
@@ -159,9 +159,9 @@
 }
 % }}}
 
-% Skills {{{
-\NewEnviron{skills_section}{
-  \section{Skills}
+% Community {{{
+\NewEnviron{community_section}{
+  \section{Community}
 	\noindent{\small\textsc{preferences:}\enskip\scriptsize\preferences}
 	\begin{multicols}{2}
 	\setlength{\parindent}{0}
@@ -173,10 +173,9 @@
 
 % }}}
 
-% Projects {{{
-\NewEnviron{projects_section}{
-  \section{Projects}
-	\refer{Please refer to his GitHub profile or \web{\home} to see a more detailed list.}
+% Other Projects {{{
+\NewEnviron{other_projects_section}{
+  \section{Other Projects}
 	\begin{multicols}{2}
 	\setlength{\parindent}{0}
 	\setlength{\parskip}{0.5em}
@@ -185,15 +184,6 @@
 	\end{multicols}
 }
 % }}}
-
-% Activities {{{
-\NewEnviron{activities_section}{
-  \section{Activities}
-	\small\BODY
-}
-\NewEnviron{activities_subsubsection_quote}{\noindent\quad\small\BODY}
-% }}}
-
 
 
 % Helpers {{{
